feat: create a full costumizable rich text editor

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-app",
+  "name": "rich-text-editor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tiptap/extension-blockquote": "^2.6.4",
+    "@tiptap/extension-document": "^2.6.4",
+    "@tiptap/extension-history": "^2.6.4",
+    "@tiptap/extension-image": "^2.6.4",
+    "@tiptap/extension-italic": "^2.6.4",
+    "@tiptap/extension-link": "^2.6.4",
+    "@tiptap/extension-paragraph": "^2.6.4",
+    "@tiptap/extension-text": "^2.6.4",
+    "@tiptap/extension-text-align": "^2.6.4",
+    "@tiptap/extension-underline": "^2.6.4",
+    "@tiptap/pm": "^2.6.4",
+    "@tiptap/react": "^2.6.4",
+    "@tiptap/starter-kit": "^2.6.4",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.428.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@types/node": "^20",
