--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/pm": "^2.6.4",
     "@tiptap/react": "^2.6.4",
     "@tiptap/starter-kit": "^2.6.4",
+    "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.4",
